Ajustes margem, imagens, responsividade

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <!-- Document Full Container
 	============================================= -->
-  <div id="full-container background-ps">
-    <!-- Header
-		============================================= -->
+  <!-- Header
+  ============================================= -->
+  <div id="full-container">
     <header id="header" class="style-1" data-scroll-index="0">
       <div id="header-wrap">
         <div class="container">
@@ -67,10 +67,10 @@
                     <a data-scroll-nav="2" href="#sobre">SOBRE</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="3" href="#planos">PLANOS DE SAÚDE</a>
+                    <a data-scroll-nav="3" href="#avaliacoes">AVALIAÇÕES</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="4" href="#avaliacoes">AVALIAÇÕES</a>
+                    <a data-scroll-nav="4" href="#planos">PLANOS DE SAÚDE</a>
                   </li>
                 </ul>
                 <a class="
@@ -108,18 +108,18 @@
       <!-- #header-wrap end -->
     </header>
     <!-- #header end -->
-
+    <!-- data-parallax-bg-img="Background1.jpeg" -->
     <!-- Banner
 		============================================= -->
-    <section id="banner" class="fullscreen background-ps" data-scroll-index="0">
-      <div class="banner-parallax " data-parallax-bg-img="Background1.jpeg" data-stellar-background-ratio="0.9">
+    <section id="banner" class="fullscreen" data-scroll-index="0">
+      <div class="banner-parallax"  data-stellar-background-ratio="0.9">
         <div class="overlay-colored" data-bg-color="#fff" data-bg-color-opacity="0.05"></div>
         <!-- .overlay-colored end -->
         <div class="slide-content">
           <div class="container">
             <div class="row">
-              <div class="col-xs-8 col-md-offset-1">
-                <div class="banner-center-box text">
+              <div class="col-md-8 col-md-offset-1">
+                <div class="banner-center-box">
                   <h1>Conheça os melhores planos de saúde do mercado</h1>
                   <div class="description">
                     Tenha um atendimento personalizado a qualquer hora.
@@ -266,184 +266,181 @@
               </div>
             </div>
           </div>
-          <!-- .parallax-section end -->
-          <!-- === Happy Clients =========== -->
-          <div id="avaliacoes" class="flat-section happy-clients" data-scroll-index="4">
-            <div class="section-content">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-8 col-md-offset-2">
-                    <div class="section-title colored text-center">
-                      <h2>AVALIAÇÕES</h2>
-                      <p>
-                        Confira o que os nossos clientes dizem sobre o atendimento personalizado que recebem da Portal
-                        Saúde
-                      </p>
-                    </div>
-                    <!-- .section-title end -->
-                  </div>
-                  <!-- .col-md-8 end -->
-                  <div class="col-md-12">
-                    <div class="testmonials-slider">
-                      <ul class="owl-carousel">
-                        <li>
-                          <div class="slide">
-                            <div class="testmonial-single">
-                              <div class="ts-content">
-                                Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeito
-                                com os serviços oferecidos pelo Plano Hospitalar
-                              </div>
-                              <!-- .ts-content end -->
-                              <div class="ts-person">
-                                <span class="ts-img"><img src="/images/avaliacoes/circle3-1.png" alt="" /></span>
-                                <h4>Renato Sgarbi</h4>
-                              </div>
-                            </div>
-                            <!-- .testmonial-single end -->
-                          </div>
-                          <!-- .slide end -->
-                        </li>
-                        <li>
-                          <div class="slide">
-                            <div class="testmonial-single ts-color-2">
-                              <div class="ts-content">
-                                Definitivamente não tem produto melhor no mercado, e o que mais me surpreendeu foi a
-                                qualidade no atendimento ao Cliente
-                              </div>
-                              <!-- .ts-content end -->
-                              <div class="ts-person">
-                                <span class="ts-img"><img src="/images/avaliacoes/circle2-1.png" alt="" /></span>
-                                <h4>Pedro R. Silva</h4>
-                              </div>
-                            </div>
-                            <!-- .testmonial-single end -->
-                          </div>
-                          <!-- .slide end -->
-                        </li>
-                        <li>
-                          <div class="slide">
-                            <div class="testmonial-single">
-                              <div class="ts-content">
-                                Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeita
-                                com os serviços oferecidos pela Unimed Seguros Saúde.
-                              </div>
-                              <!-- .ts-content end -->
-                              <div class="ts-person">
-                                <span class="ts-img"><img src="/images/avaliacoes/44.png" alt="" /></span>
-                                <h4>Marcos Souza</h4>
-                              </div>
-                            </div>
-                            <!-- .testmonial-single end -->
-                          </div>
-                          <!-- .slide end -->
-                        </li>
-                        <li>
-                          <div class="slide">
-                            <div class="testmonial-single ts-color-2">
-                              <div class="ts-content">
-                                Definitivamente não tem produto melhor no mercado, e o que mais me surpreendeu foi a
-                                questão do reembolso, isso é Unimed Seguros Saúde.
-                              </div>
-                              <!-- .ts-content end -->
-                              <div class="ts-person">
-                                <span class="ts-img"><img src="/images/avaliacoes/ant-rozetsky-256125.jpg"
-                                    alt="" /></span>
-                                <h4>Talita Rizzo</h4>
-                              </div>
-                            </div>
-                            <!-- .testmonial-single end -->
-                          </div>
-                          <!-- .slide end -->
-                        </li>
-                      </ul>
-                    </div>
-                    <!-- .testmonials-slider end -->
-                  </div>
-                  <!-- .col-md-12 end -->
-                  <div class="col-md-4"></div>
-                  <!-- .col-md-4 end -->
-                  <div class="col-md-4"></div>
-                  <!-- .col-md-4 end -->
-                </div>
-                <!-- .row end -->
-              </div>
-              <!-- .container end -->
-            </div>
-            <!-- .section-content end -->
-          </div>
-          <!-- .flat-section end -->
-
-          <!-- === Our Services =========== -->
-          <div id="planos" class="parallax-section our-services" data-scroll-index="3">
-            <div class="section-inner">
-              <div class="container">
-                <div class="row">
-                  <div class="section-content">
-                    <div id="teste1" class="section-title2 text-white mt-5 text-center">
-                      <h2>Planos de Saúde</h2>
-                      <p>
-                        Conheça aqui todas as opções em planos de saúde familiar e empresarial, e faça sua cotação
-                        gratuitamente.
-                      </p>
-                    </div>
-                    <div id="slideShow" class="row img-planosSaude text-center">
-                      <img src="/images/amil.png" alt="amil" style="width: 200px; height: 150px;">
-                      <img src="/images/sulAmerica.png" alt="sulAmerica" style="width: 190px;">
-                      <img src="/images/bradesco.png" alt="bradesco">
-                      <img src="/images/unimed.png" alt="unimed">
-                      <img src="/images/hospitalar.png" alt="hospitalar">
-                    </div>
-                    <div id="slideShow" class="row img-planosSaude1 text-center">
-                      <img src="/images/notredame.png" alt="notredame">
-                      <img src="/images/humanaSaude.png" alt="humanaSaude" style="height: 200px; width: 300px">
-                      <img src="/images/santaRitaSaude.png" alt="santaRitaSaude">
-                      <img src="/images/omint.png" alt="omint" style="height: 200px; width: 200px;">
-                    </div>
-                  </div>
-                  <!-- .section-content end -->
-                </div>
-                <!-- .row end -->
-              </div>
-              <!-- .container end -->
-            </div>
-            <!-- .section-inner end -->
-          </div>
-          <!-- .parallax-section end -->
-
-
-          <!-- Footer Mini
-		============================================= -->
-          <footer id="footer-mini">
+        </div>
+        <!-- === Happy Clients =========== -->
+        <div id="avaliacoes" class="flat-section happy-clients" data-scroll-index="3">
+          <div class="section-content">
             <div class="container">
               <div class="row">
-                <div class="col-md-12">
-                  <div class="copyrights-message">
-                    2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
+                <div class="col-md-8 col-md-offset-2">
+                  <div class="section-title colored text-center">
+                    <h2>AVALIAÇÕES</h2>
+                    <p>
+                      Confira o que os nossos clientes dizem sobre o atendimento personalizado que recebem da Portal
+                      Saúde
+                    </p>
                   </div>
-                  <ul class="social-icons">
-                    <li>
-                      <a class="si-facebook" href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li>
-                      <a class="si-behance" href="#"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li>
-                      <a class="si-twitter" href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                  </ul>
-                  <!-- .social-icons end -->
+                  <!-- .section-title end -->
+                </div>
+                <!-- .col-md-8 end -->
+                <div class="col-md-12">
+                  <div class="testmonials-slider">
+                    <ul class="owl-carousel">
+                      <li>
+                        <div class="slide">
+                          <div class="testmonial-single">
+                            <div class="ts-content">
+                              Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeito
+                              com os serviços oferecidos pelo Plano Hospitalar
+                            </div>
+                            <!-- .ts-content end -->
+                            <div class="ts-person">
+                              <span class="ts-img"><img src="images/avaliacoes/circle3-1.png" alt="" /></span>
+                              <h4>Renato Sgarbi</h4>
+                            </div>
+                          </div>
+                          <!-- .testmonial-single end -->
+                        </div>
+                        <!-- .slide end -->
+                      </li>
+                      <li>
+                        <div class="slide">
+                          <div class="testmonial-single ts-color-2">
+                            <div class="ts-content">
+                              Definitivamente não tem produto melhor no mercado, e o que mais me surpreendeu foi a
+                              qualidade no atendimento ao Cliente
+                            </div>
+                            <!-- .ts-content end -->
+                            <div class="ts-person">
+                              <span class="ts-img"><img src="images/avaliacoes/circle2-1.png" alt="" /></span>
+                              <h4>Pedro R. Silva</h4>
+                            </div>
+                          </div>
+                          <!-- .testmonial-single end -->
+                        </div>
+                        <!-- .slide end -->
+                      </li>
+                      <li>
+                        <div class="slide">
+                          <div class="testmonial-single">
+                            <div class="ts-content">
+                              Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeita
+                              com os serviços oferecidos pela Unimed Seguros Saúde.
+                            </div>
+                            <!-- .ts-content end -->
+                            <div class="ts-person">
+                              <span class="ts-img"><img src="images/avaliacoes/44.png" alt="" /></span>
+                              <h4>Marcos Souza</h4>
+                            </div>
+                          </div>
+                          <!-- .testmonial-single end -->
+                        </div>
+                        <!-- .slide end -->
+                      </li>
+                      <li>
+                        <div class="slide">
+                          <div class="testmonial-single ts-color-2">
+                            <div class="ts-content">
+                              Definitivamente não tem produto melhor no mercado, e o que mais me surpreendeu foi a
+                              questão do reembolso, isso é Unimed Seguros Saúde.
+                            </div>
+                            <!-- .ts-content end -->
+                            <div class="ts-person">
+                              <span class="ts-img"><img src="images/avaliacoes/ant-rozetsky-256125.jpg" alt="" /></span>
+                              <h4>Talita Rizzo</h4>
+                            </div>
+                          </div>
+                          <!-- .testmonial-single end -->
+                        </div>
+                        <!-- .slide end -->
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- .testmonials-slider end -->
                 </div>
                 <!-- .col-md-12 end -->
+                <div class="col-md-4"></div>
+                <!-- .col-md-4 end -->
+                <div class="col-md-4"></div>
+                <!-- .col-md-4 end -->
               </div>
               <!-- .row end -->
             </div>
             <!-- .container end -->
-          </footer>
-          <!-- #footer-mini end -->
+          </div>
+          <!-- .section-content end -->
         </div>
-        <!-- #full-container end -->
+        <!-- .flat-section end -->
 
-        <a class="scroll-top" href="#"><img src="images/WhatsApp.png" alt="WhatsApp" /></a>
+        <!-- === Our Services =========== -->
+        <div id="planos" class="parallax-section our-services" data-scroll-index="4">
+          <div class="section-inner">
+            <div class="container">
+              <div class="row">
+                <div class="section-content">
+                  <div id="teste1" class="section-title2 text-white mt-5 text-center">
+                    <h2>Planos de Saúde</h2>
+                    <p>
+                      Conheça aqui todas as opções em planos de saúde familiar e empresarial, e faça sua cotação
+                      gratuitamente.
+                    </p>
+                  </div>
+                  <div id="slideShow" class="row img-planosSaude text-center">
+                    <img src="images/amil.png" alt="amil" style="width: 200px; height: 150px;">
+                    <img src="images/sulAmerica.png" alt="sulAmerica" style="width: 190px;">
+                    <img src="images/bradesco.png" alt="bradesco">
+                    <img src="images/unimed.png" alt="unimed">
+                    <img src="images/hospitalar.png" alt="hospitalar">
+                  </div>
+                  <div id="slideShow" class="row img-planosSaude1 text-center">
+                    <img src="images/notredame.png" alt="notredame">
+                    <img src="images/humanaSaude.png" alt="humanaSaude" style="height: 200px; width: 300px">
+                    <img src="images/santaRitaSaude.png" alt="santaRitaSaude">
+                    <img src="images/omint.png" alt="omint" style="height: 200px; width: 200px;">
+                  </div>
+                </div>
+                <!-- .section-content end -->
+              </div>
+              <!-- .row end -->
+            </div>
+            <!-- .container end -->
+          </div>
+          <!-- .section-inner end -->
+        </div>
+        <!-- .parallax-section end -->
+
+        <!-- Footer Mini
+  ============================================= -->
+        <footer id="footer-mini">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="copyrights-message">
+                  2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
+                </div>
+                <ul class="social-icons">
+                  <li>
+                    <a class="si-facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  </li>
+                  <li>
+                    <a class="si-behance" href="#"><i class="fa fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a class="si-twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  </li>
+                </ul>
+                <!-- .social-icons end -->
+              </div>
+              <!-- .col-md-12 end -->
+            </div>
+            <!-- .row end -->
+          </div>
+          <!-- .container end -->
+        </footer>
+        <!-- #footer-mini end -->
+        <!-- #full-container end -->
+        <a class="scroll-top" href="https://api.whatsapp.com/send?phone=5543998291302&text="><img
+            src="images/WhatsApp.png" alt="WhatsApp" /></a>
 
         <!-- External JavaScripts
 	============================================= -->
