ajustes responsividade e adicionado DDD ao formulario de telefone

--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@
                         <input type="text" name="afEmail" id="afEmail" class="form-control"
                           placeholder="Seu Melhor E-mail" />
                       </div>
-                      <div class="form-group">
-                        <input type="text" name="afPhoneNum" id="afPhoneNum" class="form-control"
-                          placeholder="Celular" />
+                      <div class="form-group form-phone">
+                        <div class="form-phone-ddd">
+                          <input type="text" name="afPhoneDdd" id="afPhoneDdd" class="form-control"
+                          placeholder="DDD" />
+                        </div>
+                        <div class="form-phone-num">
+                          <input type="text" name="afPhoneNum" id="afPhoneNum" class="form-control"
+                            placeholder="Celular" />
+                        </div>
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check1">Pessoa Física</label>
