ajustes backend php para envio email, inclusao dos links redes sociais

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- Banner
 		============================================= -->
     <section id="banner" class="fullscreen" data-scroll-index="0">
-      <div class="banner-parallax"  data-stellar-background-ratio="0.9">
+      <div class="banner-parallax" data-stellar-background-ratio="0.9">
         <div class="overlay-colored" data-bg-color="#fff" data-bg-color-opacity="0.05"></div>
         <!-- .overlay-colored end -->
         <div class="slide-content">
@@ -172,8 +172,7 @@
                       </div>
                       <div class="form-group form-phone">
                         <div class="form-phone-ddd">
-                          <input type="text" name="afPhoneDdd" id="afPhoneDdd" class="form-control"
-                          placeholder="DDD" />
+                          <input type="text" name="afPhoneDdd" id="afPhoneDdd" class="form-control" placeholder="DDD" />
                         </div>
                         <div class="form-phone-num">
                           <input type="text" name="afPhoneNum" id="afPhoneNum" class="form-control"
@@ -424,17 +423,17 @@
                 <div class="copyrights-message">
                   2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
                 </div>
-                <ul class="social-icons">
-                  <li>
-                    <a class="si-facebook" href="#"><i class="fa fa-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a class="si-behance" href="#"><i class="fa fa-instagram"></i></a>
-                  </li>
-                  <li>
-                    <a class="si-twitter" href="#"><i class="fa fa-twitter"></i></a>
-                  </li>
-                </ul>
+                <div class="social-conteiner">
+                  <ul class="">
+                    <li>
+                      <a class="" href="https://www.facebook.com/portalsaudeoficialbrasil" target="_blank"><img src="/images/Social/Facebook.png" alt="facebook" class="social-img"></a>
+                    </li>
+                    <li>
+                      <a class="" href="https://www.instagram.com/portalsaudeoficial1/" target="_blank"><img src="/images/Social/Instagram.png" alt="Instagram"
+                          class="social-img"></a>
+                    </li>
+                  </ul>
+                </div>
                 <!-- .social-icons end -->
               </div>
               <!-- .col-md-12 end -->
