finalizando detalhes, inserindo checkbox no backend php

--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check1">Pessoa Física</label>
-                        <input type="checkbox" class="" id="inputPf" />
+                        <input type="checkbox" class="" id="inputPf" value="yes"/>
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check2">Pessoa Jurídica</label>
-                        <input type="checkbox" class="" id="inputPj" />
+                        <input type="checkbox" class="" id="inputPj" value="yes"/>
                       </div>
                       <!-- .form-group end -->
                       <div class="form-group">
@@ -398,7 +398,7 @@
                     <img src="images/hospitalar.png" alt="hospitalar">
                   </div>
                   <div id="slideShow" class="row img-planosSaude1 text-center">
-                    <img src="images/notredame.png" alt="notredame">
+                    <img src="images/notredame.png" alt="notredame" style="height: 180px;">
                     <img src="images/humanaSaude.png" alt="humanaSaude" style="height: 200px; width: 300px">
                     <img src="images/santaRitaSaude.png" alt="santaRitaSaude">
                     <img src="images/omint.png" alt="omint" style="height: 200px; width: 200px;">
@@ -426,10 +426,10 @@
                 <div class="social-conteiner">
                   <ul class="">
                     <li>
-                      <a class="" href="https://www.facebook.com/portalsaudeoficialbrasil" target="_blank"><img src="/images/Social/Facebook.png" alt="facebook" class="social-img"></a>
+                      <a class="" href="https://www.facebook.com/portalsaudeoficialbrasil" target="_blank"><img src="./images/Social/Facebook.png" alt="facebook" class="social-img"></a>
                     </li>
                     <li>
-                      <a class="" href="https://www.instagram.com/portalsaudeoficial1/" target="_blank"><img src="/images/Social/Instagram.png" alt="Instagram"
+                      <a class="" href="https://www.instagram.com/portalsaudeoficial1/" target="_blank"><img src="./images/Social/Instagram.png" alt="Instagram"
                           class="social-img"></a>
                     </li>
                   </ul>
