Finalizando formulario de email

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                         </div>
                       </div>
                       <div class="check-box-diego">
-                        <label class="form-check-label" for="check1">Pessoa Física</label>
-                        <input type="checkbox" class="" id="inputPf" value="yes"/>
+                        <label class="form-check-label" for="check1">Pessoa Fisica</label>
+                        <input type="radio" class="" name="pfpj" id="pfpj" value="PF" checked/>
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check2">Pessoa Jurídica</label>
-                        <input type="checkbox" class="" id="inputPj" value="yes"/>
+                        <input type="radio" class="" name="pfpj" id="pfpj" value="PJ"/>
                       </div>
                       <!-- .form-group end -->
                       <div class="form-group">
