--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                     <a data-scroll-nav="1" href="#contato">CONTATO</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="2" href="#sobre">SOBRE</a>
+                    <a data-scroll-nav="2" href="#planos">PLANOS DE SAÚDE</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="3" href="#avaliacoes">AVALIAÇÕES</a>
+                    <a data-scroll-nav="3" href="#sobre">SOBRE</a>
                   </li>
                   <li>
-                    <a data-scroll-nav="4" href="#planos">PLANOS DE SAÚDE</a>
+                    <a data-scroll-nav="4" href="#avaliacoes">AVALIAÇÕES</a>
                   </li>
                 </ul>
                 <a class="
@@ -112,8 +112,8 @@
     <!-- Banner
 		============================================= -->
     <section id="banner" class="fullscreen" data-scroll-index="0">
-      <div class="banner-parallax" data-stellar-background-ratio="0.9">
-        <div class="overlay-colored" data-bg-color="#fff" data-bg-color-opacity="0.05"></div>
+      <div class="banner-parallax" data-stellar-background-ratio="0.1">
+        <div class="overlay-colored" data-bg-color="#fff" data-bg-color-opacity="0.1"></div>
         <!-- .overlay-colored end -->
         <div class="slide-content">
           <div class="container">
@@ -155,7 +155,7 @@
               <div class="row">
                 <div class="col-md-6 col-sm-12 col-md-offset-3">
                   <div class="box-appointment-form">
-                    <h2>Deixe seu Contato</h2>
+                    <h2>Simule seu plano de saúde</h2>
                     <p>
                       Quero te conhecer melhor! Preencha seus dados para um atendimento personalizado
                     </p>
@@ -179,13 +179,17 @@
                             placeholder="Celular" />
                         </div>
                       </div>
+                      <div class="form-group">
+                        <input type="text" name="afIdades" id="afIdades" class="form-control"
+                          placeholder="Coloque aqui as idades para o cálculo" />
+                      </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check1">Pessoa Fisica</label>
-                        <input type="radio" class="" name="pfpj" id="pfpj" value="PF" checked/>
+                        <input type="radio" class="" name="inputPessoa" id="inputPessoaF" value="Pessoa Fisica" checked />
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check2">Pessoa Jurídica</label>
-                        <input type="radio" class="" name="pfpj" id="pfpj" value="PJ"/>
+                        <input type="radio" class="" name="inputPessoa" id="inputPessoaJ" value="Pessoa Jurídica" />
                       </div>
                       <!-- .form-group end -->
                       <div class="form-group">
@@ -210,13 +214,50 @@
           <!-- .section-content end -->
         </div>
         <!-- .flat-section end -->
-
-        <!-- === Watch Video =========== -->
-        <div id="sobre" class="parallax-section watch-video" data-scroll-index="2">
+        <!-- === Our Services =========== -->
+        <div id="planos" class="parallax-section our-services" data-scroll-index="2">
           <div class="section-inner">
             <div class="container">
               <div class="row">
                 <div class="section-content">
+                  <div id="teste1" class="section-title2 text-white mt-5 text-center">
+                    <h2>Planos de Saúde</h2>
+                    <p>
+                      Conheça aqui todas as opções em planos de saúde familiar e empresarial, e faça sua cotação
+                      gratuitamente.
+                    </p>
+                  </div>
+                  <div id="slideShow" class="row img-planosSaude text-center">
+                    <img src="images/amil.png" alt="amil" style="width: 200px; height: 150px;">
+                    <img src="images/sulAmerica.png" alt="sulAmerica" style="width: 190px;">
+                    <img src="images/bradesco.png" alt="bradesco">
+                    <img src="images/unimed.png" alt="unimed">
+                    <img src="images/hospitalar.png" alt="hospitalar">
+                  </div>
+                  <div id="slideShow" class="row img-planosSaude1 text-center">
+                    <img src="images/notredame.png" alt="notredame" style="height: 180px;">
+                    <img src="images/humanaSaude.png" alt="humanaSaude" style="height: 180px; width: 300px">
+                    <img src="images/santaRitaSaude.png" alt="santaRitaSaude">
+                    <img src="images/omint.png" alt="omint" style="height: 200px; width: 200px;">
+                  </div>
+                </div>
+                <!-- .section-content end -->
+              </div>
+              <!-- .row end -->
+            </div>
+            <!-- .container end -->
+          </div>
+          <!-- .section-inner end -->
+        </div>
+        <!-- .parallax-section end -->
+
+        <!-- === Sobre a empresa =========== -->
+        <div id="sobre" class="parallax-section watch-video" data-scroll-index="3">
+          <div class="section-inner">
+            <div class="container">
+              <div class="row">
+                <div class="section-content">
+                  <img src="/images/Divisa dobra.png" alt="divisa dobra" class="img-divisa">
                   <div class="col-md-4">
                     <div class="section-title text-white mt-70">
                       <h2>Portal Saúde</h2>
@@ -273,7 +314,7 @@
           </div>
         </div>
         <!-- === Happy Clients =========== -->
-        <div id="avaliacoes" class="flat-section happy-clients" data-scroll-index="3">
+        <div id="avaliacoes" class="flat-section happy-clients" data-scroll-index="4">
           <div class="section-content">
             <div class="container">
               <div class="row">
@@ -295,8 +336,8 @@
                         <div class="slide">
                           <div class="testmonial-single">
                             <div class="ts-content">
-                              Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeito
-                              com os serviços oferecidos pelo Plano Hospitalar
+                              Realmente me surpreendi com o atendimento, vim de outro plano e fiquei muito satisfeito
+                              com os serviços oferecidos pela Portal Saúde
                             </div>
                             <!-- .ts-content end -->
                             <div class="ts-person">
@@ -330,7 +371,7 @@
                           <div class="testmonial-single">
                             <div class="ts-content">
                               Realmente me surpreendi com o Atendimento, vim de outro plano e fiquei muito satisfeita
-                              com os serviços oferecidos pela Unimed Seguros Saúde.
+                              com os serviços oferecidos pela Portal Saúde.
                             </div>
                             <!-- .ts-content end -->
                             <div class="ts-person">
@@ -347,7 +388,7 @@
                           <div class="testmonial-single ts-color-2">
                             <div class="ts-content">
                               Definitivamente não tem produto melhor no mercado, e o que mais me surpreendeu foi a
-                              questão do reembolso, isso é Unimed Seguros Saúde.
+                              questão do reembolso, isso é Portal Saúde.
                             </div>
                             <!-- .ts-content end -->
                             <div class="ts-person">
@@ -376,94 +417,65 @@
           <!-- .section-content end -->
         </div>
         <!-- .flat-section end -->
-
-        <!-- === Our Services =========== -->
-        <div id="planos" class="parallax-section our-services" data-scroll-index="4">
-          <div class="section-inner">
-            <div class="container">
-              <div class="row">
-                <div class="section-content">
-                  <div id="teste1" class="section-title2 text-white mt-5 text-center">
-                    <h2>Planos de Saúde</h2>
-                    <p>
-                      Conheça aqui todas as opções em planos de saúde familiar e empresarial, e faça sua cotação
-                      gratuitamente.
-                    </p>
-                  </div>
-                  <div id="slideShow" class="row img-planosSaude text-center">
-                    <img src="images/amil.png" alt="amil" style="width: 200px; height: 150px;">
-                    <img src="images/sulAmerica.png" alt="sulAmerica" style="width: 190px;">
-                    <img src="images/bradesco.png" alt="bradesco">
-                    <img src="images/unimed.png" alt="unimed">
-                    <img src="images/hospitalar.png" alt="hospitalar">
-                  </div>
-                  <div id="slideShow" class="row img-planosSaude1 text-center">
-                    <img src="images/notredame.png" alt="notredame" style="height: 180px;">
-                    <img src="images/humanaSaude.png" alt="humanaSaude" style="height: 200px; width: 300px">
-                    <img src="images/santaRitaSaude.png" alt="santaRitaSaude">
-                    <img src="images/omint.png" alt="omint" style="height: 200px; width: 200px;">
-                  </div>
-                </div>
-                <!-- .section-content end -->
-              </div>
-              <!-- .row end -->
-            </div>
-            <!-- .container end -->
-          </div>
-          <!-- .section-inner end -->
-        </div>
-        <!-- .parallax-section end -->
-
-        <!-- Footer Mini
+      </div>
+    </section>
+    <!-- Footer Mini
   ============================================= -->
-        <footer id="footer-mini">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="copyrights-message">
-                  2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
-                </div>
-                <div class="social-conteiner">
-                  <ul class="">
-                    <li>
-                      <a class="" href="https://www.facebook.com/portalsaudeoficialbrasil" target="_blank"><img src="./images/Social/Facebook.png" alt="facebook" class="social-img"></a>
-                    </li>
-                    <li>
-                      <a class="" href="https://www.instagram.com/portalsaudeoficial1/" target="_blank"><img src="./images/Social/Instagram.png" alt="Instagram"
-                          class="social-img"></a>
-                    </li>
-                  </ul>
-                </div>
-                <!-- .social-icons end -->
-              </div>
-              <!-- .col-md-12 end -->
+    <footer id="footer-mini">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copyrights-message">
+              2021 © <span class="colored">Portal Saude.</span> Todos os direitos reservados
             </div>
-            <!-- .row end -->
+            <div class="copyrights-message">
+              Rua João Wyclif,111 Sala 1205 - Jd Gleba Palhano
+            </div>
+            <div class="copyrights-message">
+              Londrina - PR
+            </div>
+            <div class="social-conteiner">
+              <ul class="">
+                <li>
+                  <a class="" href="https://www.facebook.com/portalsaudeoficialbrasil" target="_blank"><img
+                      src="./images/Social/Facebook.png" alt="facebook" class="social-img"></a>
+                </li>
+                <li>
+                  <a class="" href="https://www.instagram.com/portalsaudeoficial1/" target="_blank"><img
+                      src="./images/Social/Instagram.png" alt="Instagram" class="social-img"></a>
+                </li>
+              </ul>
+            </div>
+            <!-- .social-icons end -->
           </div>
-          <!-- .container end -->
-        </footer>
-        <!-- #footer-mini end -->
-        <!-- #full-container end -->
-        <a class="scroll-top" href="https://api.whatsapp.com/send?phone=5543998291302&text="><img
-            src="images/WhatsApp.png" alt="WhatsApp" /></a>
+          <!-- .col-md-12 end -->
+        </div>
+        <!-- .row end -->
+      </div>
+      <!-- .container end -->
+    </footer>
+    <!-- #footer-mini end -->
+    <!-- #full-container end -->
+    <a class="scroll-top" href="https://api.whatsapp.com/send?phone=5543998291302&text="><img src="images/WhatsApp.png"
+        alt="WhatsApp" /></a>
 
-        <!-- External JavaScripts
+    <!-- External JavaScripts
 	============================================= -->
-        <script src="js/jquery.js"></script>
-        <script src="js/jRespond.min.js"></script>
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="js/jquery.fitvids.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script>
-        <script src="js/jquery.stellar.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/hoverIntent.js"></script>
-        <script src="js/simple-scrollbar.min.js"></script>
-        <script src="js/superfish.js"></script>
-        <script src="js/scrollIt.min.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/jssocials.min.js"></script>
-        <script src="js/jquery.validate.min.js"></script>
-        <script src="js/functions.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jRespond.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fitvids.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/jquery.stellar.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/hoverIntent.js"></script>
+    <script src="js/simple-scrollbar.min.js"></script>
+    <script src="js/superfish.js"></script>
+    <script src="js/scrollIt.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jssocials.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/functions.js"></script>
 </body>
 
 </html>
