ajustes nas dobras e fontes da pagina

--- a/index.html
+++ b/index.html
@@ -156,9 +156,6 @@
                 <div class="col-md-6 col-sm-12 col-md-offset-3">
                   <div class="box-appointment-form">
                     <h2>Simule seu plano de saúde</h2>
-                    <p>
-                      Quero te conhecer melhor! Preencha seus dados para um atendimento personalizado
-                    </p>
                     <form id="appointment-form">
                       <div class="af-notifications">
                         <div class="af-notifications-cont"></div>
@@ -185,7 +182,8 @@
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check1">Pessoa Fisica</label>
-                        <input type="radio" class="" name="inputPessoa" id="inputPessoaF" value="Pessoa Fisica" checked />
+                        <input type="radio" class="" name="inputPessoa" id="inputPessoaF" value="Pessoa Fisica"
+                          checked />
                       </div>
                       <div class="check-box-diego">
                         <label class="form-check-label" for="check2">Pessoa Jurídica</label>
@@ -254,10 +252,10 @@
         <!-- === Sobre a empresa =========== -->
         <div id="sobre" class="parallax-section watch-video" data-scroll-index="3">
           <div class="section-inner">
+            <div class="img-divisa"></div>
             <div class="container">
               <div class="row">
                 <div class="section-content">
-                  <img src="/images/Divisa dobra.png" alt="divisa dobra" class="img-divisa">
                   <div class="col-md-4">
                     <div class="section-title text-white mt-70">
                       <h2>Portal Saúde</h2>
