ajustes no envio de email e imagens background

--- a/src/index.html
+++ b/src/index.html
@@ -454,7 +454,7 @@
     </footer>
     <!-- #footer-mini end -->
     <!-- #full-container end -->
-    <a class="scroll-top" href="https://api.whatsapp.com/send?phone=5543998291302&text="><img src="images/WhatsApp.png"
+    <a class="scroll-top" href="https://api.whatsapp.com/send?l=pt-BR&phone=5543991757739&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."><img src="images/WhatsApp.png"
         alt="WhatsApp" /></a>
 
     <!-- External JavaScripts
