--- a/src/obrigado.html
+++ b/src/obrigado.html
@@ -2,13 +2,27 @@
 <html lang="pt-BR">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-TTRH63F');</script>
-      <!-- End Google Tag Manager -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TTRH63F');</script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YF6N1LZ9EP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YF6N1LZ9EP');
+  </script>
+  
   <!-- Meta
 	============================================= -->
   <meta charset="utf-8" />
@@ -131,7 +145,7 @@
                   <div class="description">
                     Em breve entraremos em contato para um atendimento personalizado!
                   </div>
-               
+
                 </div>
                 <!-- .banner-center-box end -->
               </div>
@@ -147,7 +161,7 @@
     </section>
     <!-- #banner end -->
 
-    
+
     <!-- Footer Mini
   ============================================= -->
     <footer id="footer-mini">
@@ -185,8 +199,9 @@
     </footer>
     <!-- #footer-mini end -->
     <!-- #full-container end -->
-    <a class="scroll-top" href="https://api.whatsapp.com/send?l=pt-BR&phone=5543991757739&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."><img src="images/WhatsApp.png"
-        alt="WhatsApp" /></a>
+    <a class="scroll-top"
+      href="https://api.whatsapp.com/send?l=pt-BR&phone=5543991757739&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es."><img
+        src="images/WhatsApp.png" alt="WhatsApp" /></a>
 
     <!-- External JavaScripts
 	============================================= -->
